fix text overflowing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,3 +106,11 @@ a:hover {
     min-height: 100dvh;
   }
 }
+
+p,
+a {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+}
